# claude-artifacts-data-vis-app

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.cursor/rules/: project-rules.mdc
backend/: .gitignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml
backend/agents/: llm_client.py
backend/api/: chat.py  query.py
backend/models/: __init__.py
backend/tests/: test_chat.py  test_llm_client.py  test_query.py
docs/: architecture.md  component_registry.md  implementation_plan.md  product_requirements.md
frontend/: Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Chat.tsx  DataTable.tsx  ErrorBoundary.tsx  Preview.tsx
frontend/lib/: api.ts  types.ts
scripts/: debug_agent_simple.py  debug_agent_stream.py  debug_chat_endpoint.py  debug_query_endpoint.py  debug_tool_use.py
